add costum filter group
