# server/lib/server/task.api.pb.go
@@ -36,7 +36,7 @@ var file_task_api_proto_rawDesc = []byte{
 	0x76, 0x32, 0x2f, 0x6f, 0x70, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x2f, 0x61, 0x6e, 0x6e, 0x6f, 0x74,
 	0x61, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x12, 0x74, 0x61,
 	0x73, 0x6b, 0x2e, 0x70, 0x61, 0x79, 0x6c, 0x6f, 0x61, 0x64, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f,
-	0x32, 0xb2, 0x07, 0x0a, 0x0b, 0x54, 0x61, 0x73, 0x6b, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65,
+	0x32, 0xd0, 0x08, 0x0a, 0x0b, 0x54, 0x61, 0x73, 0x6b, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65,
 	0x12, 0x65, 0x0a, 0x0b, 0x48, 0x65, 0x61, 0x6c, 0x74, 0x68, 0x43, 0x68, 0x65, 0x63, 0x6b, 0x12,
 	0x16, 0x2e, 0x74, 0x61, 0x73, 0x6b, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76,
 	0x31, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x1a, 0x24, 0x2e, 0x74, 0x61, 0x73, 0x6b, 0x2e, 0x73,
@@ -70,53 +70,65 @@ var file_task_api_proto_rawDesc = []byte{
 	0x2e, 0x76, 0x31, 0x2e, 0x47, 0x72, 0x61, 0x70, 0x68, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x52,
 	0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1e, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x18, 0x12,
 	0x16, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x74, 0x61, 0x73, 0x6b, 0x2f, 0x67, 0x72, 0x61, 0x70, 0x68,
-	0x2f, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x12, 0x78, 0x0a, 0x10, 0x47, 0x65, 0x74, 0x54, 0x61,
-	0x73, 0x6b, 0x47, 0x72, 0x61, 0x70, 0x68, 0x53, 0x74, 0x65, 0x70, 0x12, 0x21, 0x2e, 0x74, 0x61,
-	0x73, 0x6b, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x72,
-	0x61, 0x70, 0x68, 0x53, 0x74, 0x65, 0x70, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x22,
+	0x2f, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x12, 0x9b, 0x01, 0x0a, 0x15, 0x47, 0x72, 0x61, 0x70,
+	0x68, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x43, 0x6f, 0x6c, 0x75, 0x6d, 0x6e, 0x54, 0x79, 0x70,
+	0x65, 0x12, 0x2d, 0x2e, 0x74, 0x61, 0x73, 0x6b, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65,
+	0x2e, 0x76, 0x31, 0x2e, 0x47, 0x72, 0x61, 0x70, 0x68, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x43,
+	0x6f, 0x6c, 0x75, 0x6d, 0x6e, 0x54, 0x79, 0x70, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74,
+	0x1a, 0x2e, 0x2e, 0x74, 0x61, 0x73, 0x6b, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e,
+	0x76, 0x31, 0x2e, 0x47, 0x72, 0x61, 0x70, 0x68, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x43, 0x6f,
+	0x6c, 0x75, 0x6d, 0x6e, 0x54, 0x79, 0x70, 0x65, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65,
+	0x22, 0x23, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x1d, 0x12, 0x1b, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x74,
+	0x61, 0x73, 0x6b, 0x2f, 0x67, 0x72, 0x61, 0x70, 0x68, 0x2f, 0x63, 0x6f, 0x6c, 0x75, 0x6d, 0x6e,
+	0x2d, 0x74, 0x79, 0x70, 0x65, 0x12, 0x78, 0x0a, 0x10, 0x47, 0x65, 0x74, 0x54, 0x61, 0x73, 0x6b,
+	0x47, 0x72, 0x61, 0x70, 0x68, 0x53, 0x74, 0x65, 0x70, 0x12, 0x21, 0x2e, 0x74, 0x61, 0x73, 0x6b,
+	0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x72, 0x61, 0x70,
+	0x68, 0x53, 0x74, 0x65, 0x70, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x22, 0x2e, 0x74,
+	0x61, 0x73, 0x6b, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x2e, 0x47,
+	0x72, 0x61, 0x70, 0x68, 0x53, 0x74, 0x65, 0x70, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65,
+	0x22, 0x1d, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x17, 0x12, 0x15, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x74,
+	0x61, 0x73, 0x6b, 0x2f, 0x67, 0x72, 0x61, 0x70, 0x68, 0x2f, 0x73, 0x74, 0x65, 0x70, 0x73, 0x12,
+	0x56, 0x0a, 0x13, 0x47, 0x65, 0x74, 0x4c, 0x69, 0x73, 0x74, 0x41, 0x6e, 0x6e, 0x6f, 0x75, 0x6e,
+	0x63, 0x65, 0x6d, 0x65, 0x6e, 0x74, 0x12, 0x1c, 0x2e, 0x74, 0x61, 0x73, 0x6b, 0x2e, 0x73, 0x65,
+	0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x52, 0x65, 0x71,
+	0x75, 0x65, 0x73, 0x74, 0x1a, 0x21, 0x2e, 0x74, 0x61, 0x73, 0x6b, 0x2e, 0x73, 0x65, 0x72, 0x76,
+	0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x54, 0x61, 0x73, 0x6b, 0x52,
+	0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x5d, 0x0a, 0x0c, 0x41, 0x73, 0x73, 0x69, 0x67,
+	0x6e, 0x54, 0x79, 0x70, 0x65, 0x49, 0x44, 0x12, 0x25, 0x2e, 0x74, 0x61, 0x73, 0x6b, 0x2e, 0x73,
+	0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x2e, 0x41, 0x73, 0x73, 0x69, 0x67, 0x6e,
+	0x61, 0x54, 0x79, 0x70, 0x65, 0x49, 0x44, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x26,
 	0x2e, 0x74, 0x61, 0x73, 0x6b, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31,
-	0x2e, 0x47, 0x72, 0x61, 0x70, 0x68, 0x53, 0x74, 0x65, 0x70, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e,
-	0x73, 0x65, 0x22, 0x1d, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x17, 0x12, 0x15, 0x2f, 0x61, 0x70, 0x69,
-	0x2f, 0x74, 0x61, 0x73, 0x6b, 0x2f, 0x67, 0x72, 0x61, 0x70, 0x68, 0x2f, 0x73, 0x74, 0x65, 0x70,
-	0x73, 0x12, 0x56, 0x0a, 0x13, 0x47, 0x65, 0x74, 0x4c, 0x69, 0x73, 0x74, 0x41, 0x6e, 0x6e, 0x6f,
-	0x75, 0x6e, 0x63, 0x65, 0x6d, 0x65, 0x6e, 0x74, 0x12, 0x1c, 0x2e, 0x74, 0x61, 0x73, 0x6b, 0x2e,
-	0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x52,
-	0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x21, 0x2e, 0x74, 0x61, 0x73, 0x6b, 0x2e, 0x73, 0x65,
-	0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x54, 0x61, 0x73,
-	0x6b, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x5d, 0x0a, 0x0c, 0x41, 0x73, 0x73,
-	0x69, 0x67, 0x6e, 0x54, 0x79, 0x70, 0x65, 0x49, 0x44, 0x12, 0x25, 0x2e, 0x74, 0x61, 0x73, 0x6b,
-	0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x2e, 0x41, 0x73, 0x73, 0x69,
-	0x67, 0x6e, 0x61, 0x54, 0x79, 0x70, 0x65, 0x49, 0x44, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74,
-	0x1a, 0x26, 0x2e, 0x74, 0x61, 0x73, 0x6b, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e,
-	0x76, 0x31, 0x2e, 0x41, 0x73, 0x73, 0x69, 0x67, 0x6e, 0x61, 0x54, 0x79, 0x70, 0x65, 0x49, 0x44,
-	0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x5b, 0x0a, 0x0f, 0x47, 0x65, 0x74, 0x54,
-	0x61, 0x73, 0x6b, 0x42, 0x79, 0x54, 0x79, 0x70, 0x65, 0x49, 0x44, 0x12, 0x23, 0x2e, 0x74, 0x61,
-	0x73, 0x6b, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65,
-	0x74, 0x54, 0x61, 0x73, 0x6b, 0x42, 0x79, 0x54, 0x79, 0x70, 0x65, 0x49, 0x44, 0x52, 0x65, 0x71,
-	0x1a, 0x23, 0x2e, 0x74, 0x61, 0x73, 0x6b, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e,
-	0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x54, 0x61, 0x73, 0x6b, 0x42, 0x79, 0x54, 0x79, 0x70, 0x65,
-	0x49, 0x44, 0x52, 0x65, 0x73, 0x42, 0x06, 0x5a, 0x04, 0x2e, 0x2f, 0x70, 0x62, 0x62, 0x06, 0x70,
-	0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x2e, 0x41, 0x73, 0x73, 0x69, 0x67, 0x6e, 0x61, 0x54, 0x79, 0x70, 0x65, 0x49, 0x44, 0x52, 0x65,
+	0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x5b, 0x0a, 0x0f, 0x47, 0x65, 0x74, 0x54, 0x61, 0x73,
+	0x6b, 0x42, 0x79, 0x54, 0x79, 0x70, 0x65, 0x49, 0x44, 0x12, 0x23, 0x2e, 0x74, 0x61, 0x73, 0x6b,
+	0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x54,
+	0x61, 0x73, 0x6b, 0x42, 0x79, 0x54, 0x79, 0x70, 0x65, 0x49, 0x44, 0x52, 0x65, 0x71, 0x1a, 0x23,
+	0x2e, 0x74, 0x61, 0x73, 0x6b, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31,
+	0x2e, 0x47, 0x65, 0x74, 0x54, 0x61, 0x73, 0x6b, 0x42, 0x79, 0x54, 0x79, 0x70, 0x65, 0x49, 0x44,
+	0x52, 0x65, 0x73, 0x42, 0x06, 0x5a, 0x04, 0x2e, 0x2f, 0x70, 0x62, 0x62, 0x06, 0x70, 0x72, 0x6f,
+	0x74, 0x6f, 0x33,
 }
 
 var file_task_api_proto_goTypes = []interface{}{
-	(*Empty)(nil),                 // 0: task.service.v1.Empty
-	(*SaveTaskRequest)(nil),       // 1: task.service.v1.SaveTaskRequest
-	(*SetTaskRequest)(nil),        // 2: task.service.v1.SetTaskRequest
-	(*ListTaskRequest)(nil),       // 3: task.service.v1.ListTaskRequest
-	(*GraphStatusRequest)(nil),    // 4: task.service.v1.GraphStatusRequest
-	(*GraphStepRequest)(nil),      // 5: task.service.v1.GraphStepRequest
-	(*ListRequest)(nil),           // 6: task.service.v1.ListRequest
-	(*AssignaTypeIDRequest)(nil),  // 7: task.service.v1.AssignaTypeIDRequest
-	(*GetTaskByTypeIDReq)(nil),    // 8: task.service.v1.GetTaskByTypeIDReq
-	(*HealthCheckResponse)(nil),   // 9: task.service.v1.HealthCheckResponse
-	(*SaveTaskResponse)(nil),      // 10: task.service.v1.SaveTaskResponse
-	(*SetTaskResponse)(nil),       // 11: task.service.v1.SetTaskResponse
-	(*ListTaskResponse)(nil),      // 12: task.service.v1.ListTaskResponse
-	(*GraphStatusResponse)(nil),   // 13: task.service.v1.GraphStatusResponse
-	(*GraphStepResponse)(nil),     // 14: task.service.v1.GraphStepResponse
-	(*AssignaTypeIDResponse)(nil), // 15: task.service.v1.AssignaTypeIDResponse
-	(*GetTaskByTypeIDRes)(nil),    // 16: task.service.v1.GetTaskByTypeIDRes
+	(*Empty)(nil),                         // 0: task.service.v1.Empty
+	(*SaveTaskRequest)(nil),               // 1: task.service.v1.SaveTaskRequest
+	(*SetTaskRequest)(nil),                // 2: task.service.v1.SetTaskRequest
+	(*ListTaskRequest)(nil),               // 3: task.service.v1.ListTaskRequest
+	(*GraphStatusRequest)(nil),            // 4: task.service.v1.GraphStatusRequest
+	(*GraphStatusColumnTypeRequest)(nil),  // 5: task.service.v1.GraphStatusColumnTypeRequest
+	(*GraphStepRequest)(nil),              // 6: task.service.v1.GraphStepRequest
+	(*ListRequest)(nil),                   // 7: task.service.v1.ListRequest
+	(*AssignaTypeIDRequest)(nil),          // 8: task.service.v1.AssignaTypeIDRequest
+	(*GetTaskByTypeIDReq)(nil),            // 9: task.service.v1.GetTaskByTypeIDReq
+	(*HealthCheckResponse)(nil),           // 10: task.service.v1.HealthCheckResponse
+	(*SaveTaskResponse)(nil),              // 11: task.service.v1.SaveTaskResponse
+	(*SetTaskResponse)(nil),               // 12: task.service.v1.SetTaskResponse
+	(*ListTaskResponse)(nil),              // 13: task.service.v1.ListTaskResponse
+	(*GraphStatusResponse)(nil),           // 14: task.service.v1.GraphStatusResponse
+	(*GraphStatusColumnTypeResponse)(nil), // 15: task.service.v1.GraphStatusColumnTypeResponse
+	(*GraphStepResponse)(nil),             // 16: task.service.v1.GraphStepResponse
+	(*AssignaTypeIDResponse)(nil),         // 17: task.service.v1.AssignaTypeIDResponse
+	(*GetTaskByTypeIDRes)(nil),            // 18: task.service.v1.GetTaskByTypeIDRes
 }
 var file_task_api_proto_depIdxs = []int32{
 	0,  // 0: task.service.v1.TaskService.HealthCheck:input_type -> task.service.v1.Empty
@@ -124,21 +136,23 @@ var file_task_api_proto_depIdxs = []int32{
 	2,  // 2: task.service.v1.TaskService.SetTask:input_type -> task.service.v1.SetTaskRequest
 	3,  // 3: task.service.v1.TaskService.GetListTask:input_type -> task.service.v1.ListTaskRequest
 	4,  // 4: task.service.v1.TaskService.GetTaskGraphStatus:input_type -> task.service.v1.GraphStatusRequest
-	5,  // 5: task.service.v1.TaskService.GetTaskGraphStep:input_type -> task.service.v1.GraphStepRequest
-	6,  // 6: task.service.v1.TaskService.GetListAnnouncement:input_type -> task.service.v1.ListRequest
-	7,  // 7: task.service.v1.TaskService.AssignTypeID:input_type -> task.service.v1.AssignaTypeIDRequest
-	8,  // 8: task.service.v1.TaskService.GetTaskByTypeID:input_type -> task.service.v1.GetTaskByTypeIDReq
-	9,  // 9: task.service.v1.TaskService.HealthCheck:output_type -> task.service.v1.HealthCheckResponse
-	10, // 10: task.service.v1.TaskService.SaveTaskWithData:output_type -> task.service.v1.SaveTaskResponse
-	11, // 11: task.service.v1.TaskService.SetTask:output_type -> task.service.v1.SetTaskResponse
-	12, // 12: task.service.v1.TaskService.GetListTask:output_type -> task.service.v1.ListTaskResponse
-	13, // 13: task.service.v1.TaskService.GetTaskGraphStatus:output_type -> task.service.v1.GraphStatusResponse
-	14, // 14: task.service.v1.TaskService.GetTaskGraphStep:output_type -> task.service.v1.GraphStepResponse
-	12, // 15: task.service.v1.TaskService.GetListAnnouncement:output_type -> task.service.v1.ListTaskResponse
-	15, // 16: task.service.v1.TaskService.AssignTypeID:output_type -> task.service.v1.AssignaTypeIDResponse
-	16, // 17: task.service.v1.TaskService.GetTaskByTypeID:output_type -> task.service.v1.GetTaskByTypeIDRes
-	9,  // [9:18] is the sub-list for method output_type
-	0,  // [0:9] is the sub-list for method input_type
+	5,  // 5: task.service.v1.TaskService.GraphStatusColumnType:input_type -> task.service.v1.GraphStatusColumnTypeRequest
+	6,  // 6: task.service.v1.TaskService.GetTaskGraphStep:input_type -> task.service.v1.GraphStepRequest
+	7,  // 7: task.service.v1.TaskService.GetListAnnouncement:input_type -> task.service.v1.ListRequest
+	8,  // 8: task.service.v1.TaskService.AssignTypeID:input_type -> task.service.v1.AssignaTypeIDRequest
+	9,  // 9: task.service.v1.TaskService.GetTaskByTypeID:input_type -> task.service.v1.GetTaskByTypeIDReq
+	10, // 10: task.service.v1.TaskService.HealthCheck:output_type -> task.service.v1.HealthCheckResponse
+	11, // 11: task.service.v1.TaskService.SaveTaskWithData:output_type -> task.service.v1.SaveTaskResponse
+	12, // 12: task.service.v1.TaskService.SetTask:output_type -> task.service.v1.SetTaskResponse
+	13, // 13: task.service.v1.TaskService.GetListTask:output_type -> task.service.v1.ListTaskResponse
+	14, // 14: task.service.v1.TaskService.GetTaskGraphStatus:output_type -> task.service.v1.GraphStatusResponse
+	15, // 15: task.service.v1.TaskService.GraphStatusColumnType:output_type -> task.service.v1.GraphStatusColumnTypeResponse
+	16, // 16: task.service.v1.TaskService.GetTaskGraphStep:output_type -> task.service.v1.GraphStepResponse
+	13, // 17: task.service.v1.TaskService.GetListAnnouncement:output_type -> task.service.v1.ListTaskResponse
+	17, // 18: task.service.v1.TaskService.AssignTypeID:output_type -> task.service.v1.AssignaTypeIDResponse
+	18, // 19: task.service.v1.TaskService.GetTaskByTypeID:output_type -> task.service.v1.GetTaskByTypeIDRes
+	10, // [10:20] is the sub-list for method output_type
+	0,  // [0:10] is the sub-list for method input_type
 	0,  // [0:0] is the sub-list for extension type_name
 	0,  // [0:0] is the sub-list for extension extendee
 	0,  // [0:0] is the sub-list for field type_name
